...
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
...
    <string name="phoneDoesNotSupport">This feature is not supported by this device</string>
    <string name="cannotUseCamera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="cameraNotAvailable">Camera not available</string>
    <string name="cameraRequired">A back facing camera is required for colorimetric analysis</string>
    <string name="tryRestarting">If the problem continues, restart this device</string>
    <string name="cannotCalibrate">Cannot calibrate</string>
    <string name="errorCameraFlashRequired">A camera flash was not found on this device</string>
    <string name="errorCalibrationIncomplete">Calibration for %1$s is incomplete</string>
    <string name="doYouWantToCalibrate">Do you want to calibrate now?</string>

    <!--Support-->
    <string name="emailSupport">Email support</string>

...
