...
                    android:textAllCaps="true"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/textVersion"
                    android:onClick="switchToDiagnosticMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:padding="10dp"
...
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#2a007a8d"
                android:textSize="46dp"
                tools:ignore="SpUsage" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabDisableDiagnostics"
                android:onClick="disableDiagnosticsMode"
                style="@style/floating_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textDiagnostics"
                android:layout_alignParentEnd="true"
...
